--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-color: lightblue;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: larger;
 }
 
 .container {
@@ -12,6 +15,7 @@ body {
     width: 400px;
     display: flex;
     flex-direction: column;
+    background-color: white;
 }
 .row {
     display: flex;
@@ -19,7 +23,6 @@ body {
 }
 .box {
     display: flex;
-    border: solid;
     width: 100%;
     height: 100%;
 }
